--- a/lesson/intro_slides.ipynb
+++ b/lesson/intro_slides.ipynb
@@ -140,11 +140,11 @@
    "source": [
     "# Tools and Setup \n",
     "\n",
-    "- data : https://swcarpentry.github.io/python-novice-inflammation/ \n",
+    "- Materials : https://github.com/mwakok/software_carpentry_learner\n",
     "\n",
-    "    - swc-python \n",
-    "        - python-novice-inflammation-code.zip\n",
-    "        - python-novice-inflammation-data.zip "
+    "- folder-name \n",
+    "    - code\n",
+    "    - data "
    ]
   },
   {
